bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: not found: value tgrue
    return(tgrue)
           ^