bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (Math.abs(n-100)<=10 || Math.abs(n-200)<=10){
    return(tgrue)
  }
  return(false)
}